# vincentpy

./: .gitignore  pyproject.toml
examples/: duckdb_example.py  llm.py  llm_example.py
vincentpy/: __init__.py  duckdb.py  langchain.py  utils.py
