[project]
name = "vincentpy"
version = "0.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.4.1",
    "langchain>=1.0.8",
    "langchain-openai",
    "langchain-fireworks",
    "polars",
    "pyarrow",
    "pydantic>=2.0.0",
]
